spacing on resource page

--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@ runscript('code/with_file.py')
         <section>
           <h2>Resources</h2>
           <p><a href="https://github.com/dhellmann/presentation-python-context-managers">
-              <i class="fa fa-github"></i>dhellmann/presentation-python-context-managers
+              <i class="fa fa-github"></i>&nbsp;dhellmann/presentation-python-context-managers
             </a>
           </p>
           <p>
             <a href="https://twitter.com/doughellmann">
-              <i class="fa fa-twitter"></i>@doughellmann
+              <i class="fa fa-twitter"></i>&nbsp;@doughellmann
             </a>
           </p>
           <p class="creativecommons">
