--- a/index.html
+++ b/index.html
@@ -343,6 +343,9 @@ ValueError: fails again
           <h2>Resources</h2>
           <p><a href="https://github.com/dhellmann/presentation-python-context-managers">
               <i class="fa fa-github"></i>&nbsp;dhellmann/presentation-python-context-managers
+            </a><br/>
+            <a href="https://docs.python.org/3.5/library/contextlib.html">
+              Standard Library: contextlib
             </a>
           </p>
           <p>
