add link to the published version of the presentation

--- a/index.html
+++ b/index.html
@@ -351,7 +351,10 @@ ValueError: fails again
           <p>
             <a href="https://twitter.com/doughellmann">
               <i class="fa fa-twitter"></i>&nbsp;@doughellmann
-            </a>
+            </a><br/>
+            <small><a href="https://doughellmann.com/presentations/python-context-managers">
+              https://doughellmann.com/presentations/python-context-managers
+            </a></small>
           </p>
           <p class="creativecommons">
             <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
