move line selection CSS out of theme into its own css file

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ import re
 
     <link rel="stylesheet" href="css/reveal.css">
     <link rel="stylesheet" href="css/theme/dhellmann.css" id="theme">
+    <link rel="stylesheet" href="css/selectable.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
     <!-- Code syntax highlighting -->
